Organization and cleanup

--- a/options.html
+++ b/options.html
@@ -6,33 +6,33 @@
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <style>
       body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-				width: 500px;
-				padding: 20px;
-      }
-			.col {
-				padding-left: 5px;
-				padding-right: 5px;
-			}
-			button {
-				cursor: pointer;
-			}
-			.entry-btn-wrapper {
-				margin-top: 10px;
-				text-align: center;
-			}
-			.delete-btn {
-				color: red;
-				cursor: pointer;
-			}
-			.delete-btn:hover {
-				opacity: 0.6;
-			}
-			.error {
-				font-size: 12px;
-				color: red;
-			}
+			font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+			font-size: 100%;
+			width: 500px;
+			padding: 20px;
+      	}
+		.col {
+			padding-left: 5px;
+			padding-right: 5px;
+		}
+		button {
+			cursor: pointer;
+		}
+		.entry-btn-wrapper {
+			margin-top: 10px;
+			text-align: center;
+		}
+		.delete-btn {
+			color: red;
+			cursor: pointer;
+		}
+		.delete-btn:hover {
+			opacity: 0.6;
+		}
+		.error {
+			font-size: 12px;
+			color: red;
+		}
     </style>
   </head>
   <body>
@@ -90,8 +90,8 @@
 			</div>
 			<button type="button" class="btn btn-link" v-on:click="showingAddEntryInputs = true" v-if="!showingAddEntryInputs">+ Add Time Entry</button>
 		</div>
-		<script src="vue.min.js"></script>
-		<script src="popup.js"></script>
+		<script src="/resources/vue.min.js"></script>
+		<script src="options.js"></script>
   </body>
 </html>
 
