--- a/options.html
+++ b/options.html
@@ -38,9 +38,9 @@
   <body>
 		<h4>ADP Auto Timecard</h4>
 		<p>Automatically fills out your timecard.</p>
-		
+		<p><b>The following days are skipped automatically:</b><br/> Weekends, Holidays, PTO/Sick days, and any day with entries already saved</p>	
 		<h4>Time Entries</h4>
-		<p>These are the entries that will be populated for each row in a day and then copied to all days in a pay period. Once entries are added, an <strong>Autofill</strong> button will be present on ADP's Timecard page.</p>
+		<p>These are the entries that will be populated for each row in a day and then copied to all days in a pay period. Once entries are added, click the <strong>Autofill</strong> button now present on ADP's Timecard page.</p>
 		<div id="app">
 			<table class="table">
 				<thead class="thead-default">
