add link to adp

--- a/options.html
+++ b/options.html
@@ -5,7 +5,13 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <style>
-      body {
+		body {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+		}
+       .page-wrapper {
 			font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
 			font-size: 100%;
 			width: 500px;
@@ -34,15 +40,19 @@
 			color: red;
 			text-align: center;
 		}
+		.adp-link {
+			float:right;
+		}
     </style>
   </head>
   <body>
-		<h4>ADP Auto Timecard</h4>
+	  <div class="page-wrapper" id="app">
+		<h4>ADP Auto Timecard <button type="button" class="btn btn-link adp-link" v-on:click="openADPTab()"><i class="fa fa-external-link" aria-hidden="true"></i> ADP</button></h4>
 		<p>Automatically fills out your timecard.</p>
 		<p><b>The following days are skipped automatically:</b><br/> Weekends, Holidays, PTO/Sick days, and any day with entries already saved</p>	
 		<h4>Time Entries</h4>
-		<p>These are the entries that will be populated for each row in a day and then copied to all days in a pay period. Once entries are added, click the <strong>Autofill</strong> button now present on ADP's Timecard page.</p>
-		<div id="app">
+		<p>These are the entries that will be populated for each row in a day and then copied to all days in a pay period. Once entries are added, navigate to ADP's Timecard page and click the <strong>Autofill</strong> button.</p>
+		<div>
 			<table class="table">
 				<thead class="thead-default">
 				<tr>
@@ -91,8 +101,9 @@
 			</div>
 			<button type="button" class="btn btn-link" v-on:click="showingAddEntryInputs = true" v-if="!showingAddEntryInputs">+ Add Time Entry</button>
 		</div>
-		<script src="/resources/vue.min.js"></script>
-		<script src="options.js"></script>
+	</div>		
+	<script src="/resources/vue.min.js"></script>
+	<script src="options.js"></script>
   </body>
 </html>
 
